--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Mon premier jeu avec JSGlib !</title>
+		<title>exemple1</title>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 		<script type="text/javascript" src="JQRebound.js"></script>
 		<script type="text/javascript" src="easing.js"></script>
@@ -26,7 +26,7 @@
 		}
 </STYLE>
 	<body>
-		<div class="rebound"><br/><br/><br/>survolez-moi !</div>
+		<div class="rebound"><br/><br/><br/>survolez-moi !</div><script>$(".rebound").JQRebound ()</script>
 
 	</body>
 </html>
