--- a/jquery-bounce-effect.html
+++ b/jquery-bounce-effect.html
@@ -40,7 +40,7 @@ var begin = 0;
 var up =50;
 var speed = 800;
 var run = true;
-var replay = true;
+var replay = false;
 function loop(){
 	if (run==true){
 		if(replay==true){
