--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <script src="http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js"></script>
     <script src="https://raw.github.com/Alex100dre/JQRebound/master/JQRebound.js"></script>
-    <script>$(".rebound").JQRebound ()</script>
+   
   </head>
   <body>
       <div id="header">
@@ -110,7 +110,7 @@
 </pre>
 </div>
 
-<div class="rebound"><br/><br/><br/>over me !</div>
+<div class="rebound"><br/><br/><br/>over me !</div> <script>$(".rebound").JQRebound ()</script>
       </section>
 
 
